ui: fix responsiveness, specially for statusbar using 668px as the breakpoint for statusbar, move from menu to custom flex div grid: remove stackable. otherwise affects media query css fix plot padding also remove popUp content from mock data

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -103,7 +103,11 @@ body {
  *for the grid 
 */
 .row {
-	padding: 2em 0 2em 0 !important;
+	padding: 2em 0 !important;
+}
+
+.ui.statistic:first-child {
+	margin: 0 !important;
 }
 
 /*
